...
        view.backgroundColor = .ypBlack
        
        authLogoImageView.image = UIImage(resource: .authScreenLogo)
        authLogoImageView.contentMode = .scaleAspectFit
        
        loginButton.setTitle("Войти", for: .normal)
        loginButton.accessibilityIdentifier = "authButton"
        loginButton.setTitleColor(.ypBlack, for: .normal)
        loginButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        
        loginButton.backgroundColor = .ypWhite
        loginButton.layer.cornerRadius = 16
        loginButton.clipsToBounds = true
...
